--- a/frontend/src/components/PetitionModal/PetitionModal.css
+++ b/frontend/src/components/PetitionModal/PetitionModal.css
@@ -30,6 +30,9 @@ body::-webkit-scrollbar-button {
 body[scheme="space_gray"] {
   --background_page: #0a0a0a; }
 
+.PanelHeader__content {
+  overflow: visible; }
+
 .PetitionModal {
   display: flex;
   flex-direction: row;
