--- a/frontend/src/components/UploadCard/UploadCard.scss
+++ b/frontend/src/components/UploadCard/UploadCard.scss
@@ -33,6 +33,7 @@
   &__card {
     border: 1px solid var(--field_border);
     border-width: 0.5px;
+    overflow: hidden;
 
     &__cancel-button {
       position: absolute;
